        - La fecha de año de rematriculacion de configuracion debe coincidir con la de la cursada para ser eliminada
    - Mail 
        - El token de verificacion no se comprobaba

- Admin
    - configuracion
        - Ahora la informacion del footer es configurables (vaciar la tabla config y usar db:seed)
        - Ahora para cargar cursadas y otros datos se usa la configuracion 'Año del ciclo actual'
    - Alumnos
        - se avisa si existe usuarios con el mismo numero de telefono
        - No se puede editar o crear si el mail ya esta en usando
    

--------------------------------------------------------------
15 de noviembre
--------------------------------------------------------------

- Admin
    - General
        - Ahora en algunos apartados no da error si se accede a un registro que no existe
        - Ya existe una confirmacion de borrado general, para los formularios con la clase ".form-eliminar"
            El html esta en resources/views/componentes/confirmacion
            Y su javascript en public/js/confirmacion
    - Alumnos
        - error al matricular al alumno, se hacia mal o no se hacia
    - Cursadas (carga masiva de datos)
        - Ahora se puede cambiar de carrera y seleccionar el año.
    - Inscriptos
        - ahora se pueden borrar





- Admin
    - Mesas creacion masiva
        - Agregar validaciones (mesa en dia no habil, dia feriado, etc)
        - Solucionar/acomdar el problema del boton con el ancho en mesas/create. Cuando sale del div (dentro del form) se acomoda
    - Diseño general
        - Enviar botones de eliminar abajo. (CORREGIDO)
        - Idear una confirmacion antes de eliminar un registro. (EN PROCESO)
    - Carreras
        - Pensar en si se puede cargar archivos como resoluciones, etc
    - Cursadas
        - En la tabla principal y al editar, no se menciona de que carrera es la cursada.
    - DB
        - Pensar en como hacer una copia de seguridad.
-Profesores
    - Agregar footer